--- a/src/Components/ComponentLayout/ComponentLayout.css
+++ b/src/Components/ComponentLayout/ComponentLayout.css
@@ -3,20 +3,18 @@
   max-width: 100%;
   justify-content: space-between;
   padding: 20px 0 0;
-  margin: 0 10px ;
+  margin: 0 10px;
 }
-.section{
-  padding: 0px 7px;
-  max-width: 99%;
+.section-content {
+  width: 99%;
   margin-top: 0px;
   position: relative;
   flex-direction: column;
 }
 
 @media only screen and (max-width: 900px) {
-  .main-content{
+  .main-content {
     display: flex;
     flex-direction: column-reverse;
-
   }
 }
