--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -20,7 +20,7 @@
 }
 
 .search {
-  grid-column-start: 2;
+ 
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -40,9 +40,12 @@
     grid-column-start: 2;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-grow: 1;
     padding-right: 10px;
     width:100%
+  }
+  .nav-title{
+    display: none;
   }
 }
