--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -101,8 +101,8 @@
 }
 .section-video {
   display: flex;
-  width: 70%;
- max-height:'70vh' ;
+  max-width: 560px;
+ max-height:500px ;
   margin: auto;
   height: 100%;
 }
