--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -61,7 +61,7 @@
 .title {
   padding-top: 2px;
   text-align: left;
-  
+  font-size: 1rem;
   padding: 0 0.2rem 0.1rem 0.5rem;
 }
 .section-image {
