--- a/src/Components/SkeletonFolder/Card/CardLayout.css
+++ b/src/Components/SkeletonFolder/Card/CardLayout.css
@@ -1,6 +1,7 @@
 .card-layout {
     background-color: rgb(255, 255, 255);
     margin: 10px 5px;
+    padding-left: 10px;
     border-radius: 1px;
     max-width: 100%;
     max-height: 50%;
