--- a/src/Components/SkeletonFolder/Layouts/Skeleton.css
+++ b/src/Components/SkeletonFolder/Layouts/Skeleton.css
@@ -1,39 +1,56 @@
 .skeleton {
-  background: rgba(190, 190, 190, 0.867);
+  
   margin: 10px 0;
   border-radius: 4px;
+  position: relative;
+  background: linear-gradient(0.25turn, transparent, rgb(255, 255, 255), transparent),
+    linear-gradient(#eee, #eee),
+    
+    linear-gradient(#eee, #eee);
+  background-repeat: no-repeat;
+  
+  background-position: -500px 0, 0 0, 0px 190px, 50px 500px; 
+  animation: loading 1.5s infinite;
 }
 
 .skeleton.text {
   width: 100%;
   height: 1rem;
+  
 }
 
 .skeleton.skeleton-title {
   width: 50%;
-  height: 2rem;
+  height: 1rem;
   margin-bottom: 20px;
 }
 .skeleton.avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
 }
 
-.skeleton.spantext{
-    width:30%;
-    margin:3px 5px;
-    height:1rem;
+.skeleton.spantext {
+  width: 20%;
+  margin: 3px 5px;
+  height: 1rem;
 }
-.skeleton.button{
-  width:5%;
-  margin:3px 5px;
-    height:2rem;
+.skeleton.button {
+  width: 10%;
+  margin: 3px 5px;
+  height: 1.5rem;
 }
 
-.skeleton.skeleton-content{
-    width:30%;
-    height:20rem;
-    border-radius: 5px;
-    margin:auto;
+.skeleton.skeleton-content {
+  width: 80%;
+  height: 20rem;
+  border-radius: 5px;
+  margin: auto;
+}
+
+@keyframes loading {  
+  to {
+    background-position: 500px 0, 0 0, 0px 190px, 50px 500px;;
+  }
 }
