--- a/src/Components/SkeletonFolder/Layouts/Skeleton.css
+++ b/src/Components/SkeletonFolder/Layouts/Skeleton.css
@@ -1,5 +1,4 @@
 .skeleton {
-  
   margin: 10px 0;
   border-radius: 4px;
   position: relative;
@@ -10,7 +9,7 @@
   background-repeat: no-repeat;
   
   background-position: -500px 0, 0 0, 0px 190px, 50px 500px; 
-  animation: loading 1.5s infinite;
+  animation: loading 1.5s ;
 }
 
 .skeleton.text {
