--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -48,7 +48,8 @@
   text-align: left;
   font-weight: normal;
   margin: 0;
-  padding-left: 10px;
+  padding: 0.4rem;
+  font-size:0.8rem
 }
 
 .section {
@@ -61,6 +62,7 @@
   padding-top: 2px;
   text-align: left;
   font-size: 1rem;
+  font-weight: bold;
   padding: 0 0.2rem 0.1rem 0.5rem;
 }
 .section-image {
