--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -5,7 +5,7 @@
   box-shadow: 0px 10px 5px rgb(233, 230, 230);
   background-color: white;
   justify-content: space-between;
-  margin-right:0 ;
+  margin-right: 0;
   max-width: 100%;
   min-width: 240px;
 }
@@ -18,15 +18,12 @@
   padding: 0 20px;
   color: #3d5af1;
 }
-
 .search {
- 
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-grow: 1;
   padding-right: 10px;
- 
 }
 .display-text {
   display: block;
@@ -35,6 +32,45 @@
   line-height: 0.5rem;
   padding-left: 1.5rem;
 }
+.search-bar {
+  width: 56%;
+  position: absolute;
+  place-items: center;
+}
+
+.search-input-div {
+  width: 100%;
+  padding: 0;
+  border: 0;
+}
+.search-input {
+  width: 100%;
+  border: 0px white;
+  height: 3rem;
+  font-size: 1.3rem;
+  padding-left: 0.9rem;
+  border: hidden;
+  outline: none;
+}
+
+.search-results {
+  margin-top: 0.3rem;
+  width: 100%;
+  position: absolute;
+  background-color: whitesmoke;
+  z-index: 100;
+}
+.search-results-options {
+  margin-top: 0.3rem;
+  width: 100%;
+  position: absolute;
+  background-color: whitesmoke;
+  z-index: 100;
+  height: 200px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 500px) {
   .search {
     grid-column-start: 2;
@@ -43,9 +79,14 @@
     justify-content: flex-start;
     flex-grow: 1;
     padding-right: 10px;
-    width:100%
+    width: 100%;
   }
-  .nav-title{
+  .nav-title {
     display: none;
+  }
+  .search-bar {
+    width: 68%;
+    position: absolute;
+    place-items: center;
   }
 }
